attempt to fix gap between tabs on iphone

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,6 +5,7 @@
   height: 100%;
   display: grid;
   grid-template-rows: 40px 1fr;
+  gap: 0;
 }
 .main-page .tab-container {
   grid-row: 1;
