--- a/src/scss/_mainPage.scss
+++ b/src/scss/_mainPage.scss
@@ -3,6 +3,7 @@
     height: 100%;
     display: grid;
     grid-template-rows: 40px 1fr;
+    gap: 0;
     
     .tab-container {
         grid-row: 1;
